--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@ Helen will earn about $2,415,995.
     <input id="salary" type="text">
     <button onclick="calculate()">Calculate</button>
     <p id="displayResult">Total retirement salary:</p>
+
+    <p>Ex. 7 Which job pays best </p>
+    <p>You are offered 2 salary options:
+        Option 1: $100 per day
+        Option 2: $1 the first day, $2 the second day, $4 the third day, $8 the fourth day, and so on with the amount doubling daily.
+        Write a program to ask the number of workdays and determine which option pays better.</p>
+    <label for="days">Enter working days</label>
+    <input id="workingDays" type="text">
+    <button onclick="result()">Result</button>
+    <p id="showOption">Best option:</p>
+
 <script src="./loops.js"></script>
 </body>
 </html>
