retirement calc done and part of last exerc

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Write a program to estimate how much a young worker will make before retiring at
 Helen will earn about $2,415,995.
     </p>
     <label for="name">Enter you name</label>
-    <input id="employee" type="text">
+    <input id="name" type="text">
     <label for="age">Enter your age</label>
     <input id="age" type="text">
     <label for="salary">Enter your annual salary</label>
@@ -50,8 +50,10 @@ Helen will earn about $2,415,995.
         Write a program to ask the number of workdays and determine which option pays better.</p>
     <label for="days">Enter working days</label>
     <input id="workingDays" type="text">
-    <button onclick="result()">Result</button>
+    <button onclick="showResult()">Result</button>
     <p id="showOption">Best option:</p>
+
+
 
 <script src="./loops.js"></script>
 </body>
